* New special case for threads::shared ==> rope in attributes.pm
* Fix to avoid duplicated entries that can arise due to case differences that don't actually matter on case-tolerant systems (Adrian Issott)
* M::SD warnings now go to STDERR not STDOUT (Adrian Issott)
* Fixed bug #24162: scandeps.(bat|pl) doesn't correctly identify Core Modules on Windows (Adrian Issott)

[Changes for 0.75 - 2007-06-24]
* Fix special cases for POE. (Roderich Schupp)
* Added exported path_to_inc_name subroutine (Adrian Issott)
* Added Module::Build::ModuleInfo dependency (Adrian Issott)
* Fixed bug where input files weren't scoped properly
* Add new "check-for-dynaloader" test. (Eric Wilhelm)

[Changes for 0.74 - 2007-04-26]
* Same as 0.73_01, but not a developer release.

[Changes for 0.73_01 - 2007-03-28]
* Fixed bug "scan_deps doesn't show ALL the dependencies"
* Ensured all file entries are given by absolute paths
* Added a number of test artificial dependency trees as test data mainly for
  "scan_deps doesn't show ALL the dependencies" bug
* Added tests for scandeps recurse option (all pass)
* Added tests for scandeps skip option (all pass)
* Added tests to show a duplicated dependency is in fact only shown once (all pass)
* Added Utils.pm test module containing generic_scandeps_rv_test and
  compare_scandeps_rvs subroutines (Adrian Issott)

[Changes for 0.73 - 2007-03-25]
* Now being a little cleverer for detecting globs in diamond operators.
  (Requiring a meta character within the <>.)

[Changes for 0.72 - 2007-02-03]
* Case-insensitive @INC removal for case-insensitive
  filesystems (Eric Wilhelm)

[Changes for 0.71 - 2007-01-04]
* Added special cases for
  Catalyst
  Class::MakeMethods
  Config::Any
  DBIx::Class
  Email::Send
  Log::Log4perl
  SQL::Translator
* print() the "# Legend..." line instead of warn()ing it.

[Changes for 0.70 - 2006-11-21]
* Added special case for Image::Info.

[Changes for 0.69 - 2006-11-07]