@@ -5,6 +5,8 @@
 * Fix to avoid duplicated entries that can arise due to case differences that don't actually matter on case-tolerant systems (Adrian Issott)
 * M::SD warnings now go to STDERR not STDOUT (Adrian Issott)
 * Fixed bug #24162: scandeps.(bat|pl) doesn't correctly identify Core Modules on Windows (Adrian Issott)
+* Now finds shared libraries for modules specified as input files.
+* Tests for finding shared libraries.
 
 [Changes for 0.75 - 2007-06-24]
 * Fix special cases for POE. (Roderich Schupp)
